src/main/java/com/example/travel_itinerary_backend2/error/BadRequestException.java
package com.example.travel_itinerary_backend2.error;

public class BadRequestException extends RuntimeException {

    public BadRequestException(String message) {
        super(message);
    }

}
